# docAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: __init__.py  config.py  exceptions.py  main.py
src/data/: __init__.py  documents.py
src/models/: __init__.py  document.py
src/operations/: __init__.py  documents.py
src/routers/: __init__.py  documents.py
tests/: test_config.py  test_operations.py  test_routers.py
